- Added support for mouse whee scrolling with the jquery.mousewheel plugin. - Tickers now all get the vTicker class for css markup. - If a row height is specified that the items are now actually restricted to that height.  Add the following css to make longer items scroll properly.         .vTicker li { overflow: hidden; } - Added helper methods for easy scripting of the ticker.         $(selector).totemticker("start");         $(selector).totemticker("stop");         $(selector).totemticker("previous");         $(selector).totemticker("next");

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ h1.logo{
 		display:block;
 		background:#efefef;
 		color:#333;
+		overflow:hidden;
 		border-bottom:1px solid #ddd;
 		text-align:center;
 		font-size:25px;
